--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'B'
 - !lcsh 'Kant, Immanuel, 1724-1804'
+- GITenberg
 title: The Philosophy of Immanuel Kant
 url: http://www.gutenberg.org/ebooks/47880
